fixed button background color on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 }
 
 button {
+  background-color: white;
   width: 150px;
   padding: 15px;
   margin: 5px;
